<resources>
    <string name="app_name">MyReadingApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">精选</string>
    <string name="nav_want_read">想读</string>
    <string name="nav_is_read">在读</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>精选</item>
        <item>想读</item>
        <item>在读</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Add Book</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="is_ensure">确定</string>
    <string name="is_cancel">取消</string>
    <string name="loading_tip">加载中...</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>

    <string name="menu_item_delete">DELETE</string>

    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>

</resources>
